@@ -222,6 +222,49 @@ AutoCategory.defaultAcctSettings = {
 	rules = AutoCategory.predefinedRules,
 	bags = {
 		[AC_BAG_TYPE_BACKPACK] = {
+            rules = {},
+		},
+		[AC_BAG_TYPE_BANK] = {
+            rules = {},
+		},
+		[AC_BAG_TYPE_GUILDBANK] = {
+            rules = {},
+		},
+		[AC_BAG_TYPE_CRAFTBAG] = {
+            rules = {},
+		},
+		[AC_BAG_TYPE_CRAFTSTATION] = {
+            rules = {},
+		},
+		[AC_BAG_TYPE_HOUSEBANK] = {
+            rules = {},
+		},
+	}, 
+	appearance = {
+		["CATEGORY_FONT_NAME"] = "Univers 67",
+		["CATEGORY_FONT_STYLE"] = "soft-shadow-thin",
+		["CATEGORY_FONT_COLOR"] =  {
+			[1] = 1,
+			[2] = 1,
+			[3] = 1,
+			[4] = 1,
+		},
+		["CATEGORY_FONT_SIZE"] = 18,
+		["CATEGORY_FONT_ALIGNMENT"] = 1,
+		["CATEGORY_OTHER_TEXT"] = L(SI_AC_DEFAULT_NAME_CATEGORY_OTHER),
+		["CATEGORY_HEADER_HEIGHT"] = 52, 
+	},
+	general = {
+		["SHOW_MESSAGE_WHEN_TOGGLE"] = false,
+		["SHOW_CATEGORY_ITEM_COUNT"] = true, 
+		["SAVE_CATEGORY_COLLAPSE_STATUS"] = false,
+	},
+    collapses = AutoCategory.defaultCollapses,
+}
+
+AutoCategory.defaultAcctBagSettings = {
+	bags = {
+		[AC_BAG_TYPE_BACKPACK] = {
 			rules = {
 				{
 					["priority"] = 100,
@@ -854,25 +897,4 @@ AutoCategory.defaultAcctSettings = {
 			},
 		},
 	}, 
-	appearance = {
-		["CATEGORY_FONT_NAME"] = "Univers 67",
-		["CATEGORY_FONT_STYLE"] = "soft-shadow-thin",
-		["CATEGORY_FONT_COLOR"] =  {
-			[1] = 1,
-			[2] = 1,
-			[3] = 1,
-			[4] = 1,
-		},
-		["CATEGORY_FONT_SIZE"] = 18,
-		["CATEGORY_FONT_ALIGNMENT"] = 1,
-		["CATEGORY_OTHER_TEXT"] = L(SI_AC_DEFAULT_NAME_CATEGORY_OTHER),
-		["CATEGORY_HEADER_HEIGHT"] = 52, 
-	},
-	general = {
-		["SHOW_MESSAGE_WHEN_TOGGLE"] = false,
-		["SHOW_CATEGORY_ITEM_COUNT"] = true, 
-		["SAVE_CATEGORY_COLLAPSE_STATUS"] = false,
-	},
-    collapses = AutoCategory.defaultCollapses,
 }
-
